[gd_scene load_steps=2 format=3 uid="uid://bq8r7s5t4u9wx"]

[ext_resource type="Script" path="res://scripts/ui/load_menu.gd" id="1_load"]

[node name="LoadMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_load")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "LOAD GAME"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Slot1Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Slot 1 - Empty"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Slot2Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Slot 2 - Empty"

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Slot3Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Slot 3 - Empty"

[node name="Spacer4" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/Slot1Button" to="." method="_on_slot1_pressed"]
[connection signal="pressed" from="VBoxContainer/Slot2Button" to="." method="_on_slot2_pressed"]
[connection signal="pressed" from="VBoxContainer/Slot3Button" to="." method="_on_slot3_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_pressed"]
